--- a/src/app/page/author-list/author-list.component.html
+++ b/src/app/page/author-list/author-list.component.html
@@ -6,16 +6,17 @@
           <div class="card-header card-header-warning">
             <div class="d-flex justify-content-between align-items-center">
               <h4 class="card-title mb-0 ">Author List</h4>
+              <!-- <div>
+                <input class="form-control" type="text" name="search" [(ngModel)]="searchText" autocomplete="off"
+                  placeholder="Seach here...." />
+              </div> -->
               <div>
-                <div>
-                  <input class="form-control" type="text" name="search" [(ngModel)]="searchText" autocomplete="off" placeholder="Seach here...."/>
-                </div>
                 <a mat-raised-button [routerLink]="'/page/addUser'">Create User</a>
               </div>
             </div>
           </div>
           <div>
-            
+
           </div>
           <table class="table table-hover">
             <thead>
@@ -36,8 +37,7 @@
                 <td>{{user.email}}</td>
                 <td>{{user.profile.toUpperCase()}}</td>
                 <td>
-                  <a class="text-white" mat-mini-fab color="accent"
-                    [routerLink]="['/page/updateUser/'+user.id]">
+                  <a class="text-white" mat-mini-fab color="accent" [routerLink]="['/page/updateUser/'+user.id]">
                     <mat-icon class="mat-18">create</mat-icon>
                   </a>
                   <a class="ml-3 text-white" mat-mini-fab color="primary">
@@ -46,13 +46,14 @@
                 </td>
               </tr>
             </tbody>
-            <pagination-controls 
-                previousLabel="Prev"
-                nextLabel="Next"
-                (pageChange)="onTableDataChange($event)">
-              </pagination-controls>
+
           </table>
+
+          <div class="pb-4 d-flex justify-content-end pr-3">
+            <pagination-controls previousLabel="Prev" nextLabel="Next" (pageChange)="onTableDataChange($event)">
+            </pagination-controls>
           </div>
+        </div>
       </div>
     </div>
   </div>
