--- a/src/app/page/sub-topic/sub-topic.component.html
+++ b/src/app/page/sub-topic/sub-topic.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-md-12 reused_table_header">
+    <div class="row justify-content-center">
+        <div class="col-md-10 reused_table_header">
             <div class="card p-3">
                 <div class="card-header card-header-warning ">
                     <div class="d-flex justify-content-between align-items-center ">
