--- a/src/app/page/update-question/update-question.component.html
+++ b/src/app/page/update-question/update-question.component.html
@@ -1,30 +1,35 @@
-<div class="container">
-           <div class="row">
-               <div class="col-md-12">
-                   <h2 class="text-center">Update Question</h2>
-                   <form #topicForm="ngForm" (ngSubmit)="updateQuestion(topicForm.value)">
-                       <mat-form-field class="form-field" appearance="outline">
-                           <mat-label>Question</mat-label>
-                           <input [(ngModel)]="question" name="question" type="text" matInput placeholder="Enter Question">
-                           <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-                       </mat-form-field>
-                       
-                       <div>
+<div class="container-fluid">
+    <div class="row justify-content-center">
+        <div class="col-md-10 reused_table_header">
+            <div class="card p-3">
+                <div class="card-header card-header-warning">
+                    <div class="d-flex justify-content-between">
+                        
+                    <h2 class="card-title mb-0">Update Question</h2>
+                    <button  mat-raised-button 
+                                (click)="backButton()">Back To Sub Topic</button>
+                    </div>
+                </div>
+                <form #topicForm="ngForm" class="mt-4" (ngSubmit)="updateQuestion(topicForm.value)">
+                    <mat-form-field class="form-field w-100" appearance="outline">
+                        <mat-label>Question</mat-label>
+                        <input [(ngModel)]="question" name="question" type="text" matInput placeholder="Enter Question">
+                    </mat-form-field>
 
-                                 <select class="form-control" name="course" #course="ngModel" [(ngModel)]="subTopicData">
-                                            <option disabled *ngFor="let subTopic of subTopicsList"  [value]="subTopic" [selected]="subTopic.subTopicName === subTopicName">
-                                                       {{subTopic.subTopicName}}
-                                            </option>
-                                 </select>
-                                 </div>
-                      
-                       <div class="container text-center">
-                           <div class="example-button-row">
-                               <button type="submit" mat-raised-button color="primary">Update Question</button>
-                               <button class="navLink button-style" mat-raised-button color="primary" (click)="backButton()">Back To SubTopic</button>
-                           </div>
-                       </div>
-                   </form>
-               </div>
-           </div>
-       </div>
+                    <div>
+
+                        <select class="form-control" name="course" #course="ngModel" [(ngModel)]="subTopicData">
+                            <option disabled *ngFor="let subTopic of subTopicsList" [value]="subTopic"
+                                [selected]="subTopic.subTopicName === subTopicName">
+                                {{subTopic.subTopicName}}
+                            </option>
+                        </select>
+                    </div>
+                    <div class="d-flex mt-4 justify-content-end">
+                        <button type="submit" mat-raised-button color="primary">Update Question</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
