--- a/src/app/page/update-sub-topic/update-sub-topic.component.html
+++ b/src/app/page/update-sub-topic/update-sub-topic.component.html
@@ -1,30 +1,40 @@
-<div class="container">
-           <div class="row">
-               <div class="col-md-12">
-                   <h2 class="text-center">Update SubTopic</h2>
-                   <form #topicForm="ngForm" (ngSubmit)="updateSubTopic(topicForm.value)">
-                       <mat-form-field class="form-field" appearance="outline">
-                           <mat-label>SubTopic</mat-label>
-                           <input [(ngModel)]="subTopicName" name="subTopicName" type="text" matInput placeholder="Enter SubTopic">
-                           <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-                       </mat-form-field>
-                       
-                       <div>
+<div class="container-fluid">
+    <div class="row justify-content-center">
+        <div class="col-md-10 reused_table_header">
+            <div class="card p-3">
+                <div class="card-header card-header-warning">
+                    <div class="d-flex justify-content-between">
+                        <h2 class="mb-0 card-title">Update SubTopic</h2>
+                        <button  mat-raised-button 
+                                (click)="backButton()">Back To Sub Topic</button>
+                    </div>
+                </div>
+                <form #topicForm="ngForm" class="mt-4" (ngSubmit)="updateSubTopic(topicForm.value)">
+                    <mat-form-field class="form-field w-100" appearance="outline">
+                        <mat-label>SubTopic</mat-label>
+                        <input [(ngModel)]="subTopicName" name="subTopicName" type="text" matInput
+                            placeholder="Enter SubTopic">
+                    </mat-form-field>
 
-                                 <select class="form-control" name="course" #course="ngModel" [(ngModel)]="topicData">
-                                            <option disabled *ngFor="let topic of topicsList"  [value]="topic" [selected]="topic.topicName === topicName">
-                                                       {{topic.topicName}}
-                                            </option>
-                                 </select>
-                                 </div>
-                      
-                       <div class="container text-center">
-                           <div class="example-button-row">
-                               <button type="submit" mat-raised-button color="primary">Update SubTopic</button>
-                               <button class="navLink button-style" mat-raised-button color="primary" (click)="backButton()">Back To SubTopic</button>
-                           </div>
-                       </div>
-                   </form>
-               </div>
-           </div>
-       </div>
+                    <div>
+
+                        <select class="form-control" name="course" #course="ngModel" [(ngModel)]="topicData">
+                            <option disabled *ngFor="let topic of topicsList" [value]="topic"
+                                [selected]="topic.topicName === topicName">
+                                {{topic.topicName}}
+                            </option>
+                        </select>
+                    </div>
+
+                    <div class="">
+                        <div class="d-flex justify-content-end mt-4">
+                            <button type="submit" mat-raised-button color="primary">Update SubTopic</button>
+                            
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+        </div>
+    </div>
+</div>
