--- a/src/app/page/view-users/view-users.component.html
+++ b/src/app/page/view-users/view-users.component.html
@@ -51,8 +51,11 @@
                   </td>
                 </tr>
               </tbody>
-              <pagination-controls (pageChange)="page = $event"></pagination-controls>
+              
             </table>
+            <div class="pb-4 d-flex justify-content-end pr-3">
+              <pagination-controls (pageChange)="page = $event"></pagination-controls>
+            </div>
           </div>
         </div>
       </div>
