--- a/src/assets/sass/style.css
+++ b/src/assets/sass/style.css
@@ -485,4 +485,13 @@ table tr td .text-white.mat-mini-fab.mat-button-base:hover {
   font-size: 15px;
   color: #ffffff;
   margin-bottom: 0;
+}
+
+.ngx-pagination {
+  margin-bottom: 0px !important;
+  margin-top: 10px !important;
+}
+.ngx-pagination .current {
+  background: #1904E5 !important;
+  border-radius: 4px;
 }/*# sourceMappingURL=style.css.map */
