--- a/src/app/page/course/course.component.html
+++ b/src/app/page/course/course.component.html
@@ -1,15 +1,18 @@
 <div class="profile_component">
     <div class="container-fluid">
         <div class="row justify-content-center">
-            <div class="col-md-10">
-                <div class="card p-3">
-                    <div class="card-header-danger">
-                        <h4 class="mb-1">Add New Course</h4>
+            <div class="col-md-10 reused_table_header">
+                <div class="card px-3 pb-4">
+                    <div class="card-header card-header-warning">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h4 class="card-title mb-0 ">Add New  Course</h4>
+                            <a  mat-raised-button [routerLink]="'/page/viewCourse'">Back to Courses</a>
+                        </div>
                     </div>
-                    <p *ngIf="msg" style="color: red;">{{errorMsg}}</p>
-                    <form #courseForm="ngForm" (ngSubmit)="AddCourse(courseForm.value)">
+                    <p *ngIf="msg" class="text-danger">{{errorMsg}}</p>
+                    <form #courseForm="ngForm" class="mt-4" (ngSubmit)="AddCourse(courseForm.value)">
                         <div class="row">
-                            <div class="col-md-12">
+                            <div class="col-md-6">
                                 <!-- <div>
                                     <mat-form-field class="form-field" appearance="outline">
                                         <mat-label>Course</mat-label>
@@ -48,6 +51,9 @@
                                         </div>
                                     </div> -->
                                 </div>
+                            </div>
+
+                            <div class="col-md-6">
                                 <div>
                                     <mat-form-field class="form-field" appearance="outline">
                                         <mat-label>Mentor</mat-label>
