--- a/src/app/page/perform-question/perform-question.component.html
+++ b/src/app/page/perform-question/perform-question.component.html
@@ -33,12 +33,11 @@
                             <td>status</td>
                         </tr>
                     </tbody>
-                    <pagination-controls 
-                    previousLabel="Prev"
-                    nextLabel="Next"
-                    (pageChange)="onTableDataChange($event)">
-                </pagination-controls>
                 </table>
+                <div class="pb-4 d-flex justify-content-end pr-3">
+                    <pagination-controls previousLabel="Prev" nextLabel="Next" (pageChange)="onTableDataChange($event)">
+                    </pagination-controls>
+                  </div>
             </div>
         </div>
     </div>
