--- a/src/app/page/view-topic/view-topic.component.html
+++ b/src/app/page/view-topic/view-topic.component.html
@@ -2,8 +2,8 @@
   <div class="row">
     <div class="col-md-12 reused_table_header">
       <div class="card p-3">
-        <div class="card-header-danger">
-          <h2>Topic List</h2>
+        <div class="card-header card-header-danger">
+          <h2 class="card-title mb-0">Topic List</h2>
           <a class="" mat-raised-button [routerLink]="'/page/home'">Back to Home</a>
         </div>
         <table class="table table-hover">
