--- a/src/app/page/topic-view/topic-view.component.html
+++ b/src/app/page/topic-view/topic-view.component.html
@@ -12,7 +12,7 @@
           </div>
         </div>
       </div>
-      <div class="card-body table-responsive">
+      <div class="table-responsive">
         <table class="table table-hover">
           <thead>
             <tr>
