--- a/src/app/page/update-topic/update-topic.component.html
+++ b/src/app/page/update-topic/update-topic.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-12 reused_table_header">
-            <div class="card p-3">
+            <div class="card px-3">
                 <div class="card-header card-header-warning">
                     <div class="d-flex justify-content-between align-items-center">
                         <h2 class="card-title mb-0">Update Topic</h2>
