--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -19,35 +19,41 @@ a {
     }
 }
 
-.main_wapper{
-    height: calc( 100vh - 111px);
+.main_wapper {
+    height: calc(100vh - 111px);
     width: 100%;
     overflow: auto;
-    .inner_container{
+
+    .inner_container {
         height: 100%;
         overflow: auto;
         width: 100%;
-        .container-fluid:first-child{
+
+        .container-fluid:first-child {
             margin-top: 22px;
         }
     }
+
     .inner_container {
-        -ms-overflow-style: none; 
-        scrollbar-width: none; 
+        -ms-overflow-style: none;
+        scrollbar-width: none;
     }
-    .inner_container::-webkit-scrollbar { 
-        display: none; 
+
+    .inner_container::-webkit-scrollbar {
+        display: none;
     }
 }
 
 table {
     text-align: center;
-    thead{
+
+    thead {
         th {
             border-top: 1px solid transparent !important;
         }
     }
 }
+
 .card {
     background-color: $white;
     border: 0 solid transparent;
@@ -76,9 +82,9 @@ table {
     background-color: $acent  !important;
 }
 
-table tr td .text-white.mat-mini-fab.mat-button-base{
-    &:hover{
-        color: $white !important;
+table tr td .text-white.mat-mini-fab.mat-button-base {
+    &:hover {
+        color: $white  !important;
     }
 }
 
@@ -97,16 +103,18 @@ table tr td .text-white.mat-mini-fab.mat-button-base{
     }
 }
 
-.mat-drawer-inner-container{
+.mat-drawer-inner-container {
     background: $blue ;
     width: 220px !important;
 
 }
+
 .side_menu {
     width: 300px;
     padding-top: 15px;
     list-style-type: none;
     background: $blue ;
+
     li {
         transition-duration: 0.6s;
         margin-bottom: 7px;
@@ -124,10 +132,11 @@ table tr td .text-white.mat-mini-fab.mat-button-base{
     }
 
     .nav-link {
-        color: $white !important;
+        color: $white  !important;
         letter-spacing: 1.1px;
         transition-duration: .7s;
         cursor: pointer;
+
         &:hover {
             letter-spacing: 1.3px;
         }
@@ -135,25 +144,22 @@ table tr td .text-white.mat-mini-fab.mat-button-base{
 }
 
 .reused_table_header {
-    .card .card-header-warning {
-        box-shadow: 0 4px 20px 0 rgb(0 0 0 / 14%), 0 7px 10px -5px rgb(156 39 176 / 40%);
-    }
+    .card {
+        .card-header-warning {
+            background: linear-gradient(60deg, #8a7ef7, #1904e5);
+            box-shadow: 0 4px 20px 0 rgb(0 0 0 / 14%), 0 7px 10px -5px rgb(156 39 176 / 40%);
+            border-radius: 3px;
+            margin-top: -20px;
+            padding: 15px;
+            margin-left: 30px;
+            margin-right: 30px;
 
-    .card .card-header.card-header-warning {
-        border-radius: 3px;
-        margin-top: -20px;
-        padding: 15px;
-        margin-left: 30px;
-        margin-right: 30px;
-    }
-
-    .card .card-header-warning {
-        background: linear-gradient(60deg, #8a7ef7, #1904e5);
-    }
-
-    .card-title {
-        font-size: 18px;
-        color: $white;
+            .card-title {
+                font-size: 18px;
+                color: $white;
+                margin-bottom: 0px;
+            }
+        }
     }
 
     .card-category {
@@ -163,11 +169,20 @@ table tr td .text-white.mat-mini-fab.mat-button-base{
     }
 }
 
-.ngx-pagination{
+.ngx-pagination {
     margin-bottom: 0px !important;
     margin-top: 10px !important;
+
     .current {
-        background: $blue !important;
+        background: $blue  !important;
         border-radius: 4px;
     }
-} 
+}
+
+.swal2-styled.swal2-confirm {
+    background-color: $blue  !important;
+
+    &:focus {
+        box-shadow: 0 0 0 3px $blueFade  !important;
+    }
+}
