working on main inner container style

--- a/src/app/page/update-sub-topic/update-sub-topic.component.html
+++ b/src/app/page/update-sub-topic/update-sub-topic.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row justify-content-center">
         <div class="col-md-10 reused_table_header">
-            <div class="card p-3">
+            <div class="card px-3 pb-3">
                 <div class="card-header card-header-warning">
                     <div class="d-flex justify-content-between">
                         <h2 class="mb-0 card-title">Update SubTopic</h2>
