--- a/src/app/page/topic/topic.component.html
+++ b/src/app/page/topic/topic.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-md-12 reused_table_header">
-            <div class="card">
+    <div class="row justify-content-center">
+        <div class="col-md-10 reused_table_header">
+            <div class="card px-3">
                 <div class="card-header card-header-warning">
                     <div class="d-flex justify-content-between align-items-center">
                         <h4 class="card-title mb-0">Add Topic</h4>
