--- a/src/assets/sass/style.css
+++ b/src/assets/sass/style.css
@@ -2,7 +2,6 @@
   background-color: #fff;
   padding: 10px 15px;
   width: 100%;
-  margin-bottom: 30px;
   box-shadow: 0 12px 23px 0 hsla(0deg, 0%, 44%, 0.04);
   border-bottom: 1px solid #dcdcdc;
 }
@@ -361,7 +360,7 @@ a:hover {
 }
 
 .main_wapper {
-  height: calc(100vh - 111px);
+  height: calc(100vh - 82px);
   width: 100%;
   overflow: auto;
 }
@@ -369,6 +368,7 @@ a:hover {
   height: 100%;
   overflow: auto;
   width: 100%;
+  padding-top: 30px;
 }
 .main_wapper .inner_container .container-fluid:first-child {
   margin-top: 22px;
