--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -79,8 +79,7 @@
          <div *ngIf="check" class="col-lg-12 mt-5 col-md-12">
             <div class="card">
                <div class="card-header card-header-warning">
-                  <h4 class="card-title">Users Stats</h4>
-                  <p class="card-category">New Users on 15th September, 2022</p>
+                  <h4 class="card-title">{{userListName}}</h4>
                </div>
                <div class="card-body table-responsive">
                   <table class="table table-hover">
@@ -91,7 +90,7 @@
                         <!-- <th>Role</th> -->
                      </thead>
                      <tbody>
-                        <tr *ngFor="let user of users">
+                        <tr *ngFor="let user of userList">
                            <td>{{user.name}}</td>
                            <td>{{user.email}}</td>
                            <td>{{user.profile}}</td>
@@ -104,8 +103,7 @@
          <div *ngIf="trainees" class="col-lg-12 mt-5 col-md-12">
             <div class="card">
                <div class="card-header card-header-warning">
-                  <h4 class="card-title">Users Stats</h4>
-                  <p class="card-category">New Users on 15th September, 2022</p>
+                  <h4 class="card-title">{{traineeListName}}</h4>
                </div>
                <div class="card-body table-responsive">
                   <table class="table table-hover">
