commit to add role column in userlist table at dashboard

--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -87,13 +87,18 @@
                         <th>Name</th>
                         <th>Email</th>
                         <th>Profile</th>
-                        <!-- <th>Role</th> -->
+                        <th>Role</th>
                      </thead>
                      <tbody>
                         <tr *ngFor="let user of userList">
                            <td>{{user.name}}</td>
                            <td>{{user.email}}</td>
                            <td>{{user.profile}}</td>
+                           <td>
+                              <div *ngFor="let role of user.roles">
+                                {{role.roleName}}
+                              </div>
+                            </td>
                         </tr>
                      </tbody>
                   </table>
@@ -111,7 +116,6 @@
                         <th>Name</th>
                         <th>Email</th>
                         <th>Profile</th>
-                        <!-- <th>Role</th> -->
                      </thead>
                      <tbody>
                         <tr *ngFor="let user of traineeList">
