--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -79,7 +79,7 @@
          <div *ngIf="check" class="col-lg-12 mt-5 col-md-12">
             <div class="card">
                <div class="card-header card-header-warning">
-                  <h4 class="card-title">{{userListName}}</h4>
+                  <h4 class="card-title mb-0">{{userListName}}</h4>
                </div>
                <div class="card-body table-responsive">
                   <table class="table table-hover">
@@ -108,7 +108,7 @@
          <div *ngIf="trainees" class="col-lg-12 mt-5 col-md-12">
             <div class="card">
                <div class="card-header card-header-warning">
-                  <h4 class="card-title">{{traineeListName}}</h4>
+                  <h4 class="card-title mb-0">{{traineeListName}}</h4>
                </div>
                <div class="card-body table-responsive">
                   <table class="table table-hover">
