--- a/src/app/page/solve-question/solve-question.component.html
+++ b/src/app/page/solve-question/solve-question.component.html
@@ -4,7 +4,7 @@
             <div class="card p-3">
                 <div class="card-header card-header-warning">
                     <div class="d-flex justify-content-between align-items-center">
-                        <h2 class="card-title mb-0">Add Topic</h2>
+                        <h2 class="card-title mb-0">Add Status</h2>
                         <div>
                             <button mat-raised-button (click)="backButton()">Back To Questions</button>
                         </div>
@@ -14,7 +14,7 @@
                     <mat-form-field class="form-field w-100" appearance="outline">
                         <mat-label>User Id</mat-label>
                         <input #courses [(ngModel)]="loggedInUserId" name="userId" type="text" matInput
-                            placeholder="Enter Topic">
+                            placeholder="Enter userId" readonly>
                     </mat-form-field>
                     <mat-form-field class="form-field w-100" appearance="outline">
                         <mat-label>Status</mat-label>
