--- a/src/app/page/course/course.component.html
+++ b/src/app/page/course/course.component.html
@@ -55,7 +55,7 @@
 
                             <div class="col-md-6">
                                 <div>
-                                    <mat-form-field class="form-field" appearance="outline">
+                                    <!-- <mat-form-field class="form-field" appearance="outline">
                                         <mat-label>Mentor</mat-label>
                                         <mat-select name="mentorId" #mentorId="ngModel" [(ngModel)]="course.mentorId"
                                             required="">
@@ -63,7 +63,7 @@
                                                 {{mentor.name}}
                                             </mat-option>
                                         </mat-select>
-                                    </mat-form-field>
+                                    </mat-form-field> -->
                                     <!-- <div *ngIf="mentorId.touched && mentorId.invalid" class="alert alert-danger">
                                         <div *ngIf="mentorId.errors?.['required']">
                                             Mentor must be selected
