--- a/src/app/page/sub-topic-view/sub-topic-view.component.html
+++ b/src/app/page/sub-topic-view/sub-topic-view.component.html
@@ -15,7 +15,7 @@
                         <table class="table table-hover">
                               <thead>
                                     <tr>
-                                          <th>SubTopic Id</th>
+                                          <!-- <th>SubTopic Id</th> -->
                                           <th>SubTopic Name</th>
                                           <th>Topic</th>
                                           <th>Course</th>
@@ -28,7 +28,7 @@
                                           currentPage:page,
                                           totalItems:count
                                         }; let i = index">
-                                          <td>{{subTopic.id}}</td>
+                                          <!-- <td>{{subTopic.id}}</td> -->
                                           <td>
                                                 <a class="navLink mr-1"
                                                       [routerLink]="['/page/questionView/'+subTopic.id]">
