--- a/src/app/page/update-course/update-course.component.html
+++ b/src/app/page/update-course/update-course.component.html
@@ -32,14 +32,14 @@
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <div class="form-group">
+                                <!-- <div class="form-group">
                                     <select class="form-control" name="mentorId" #mentorId="ngModel"
                                         [(ngModel)]="mentorName">
                                         <option *ngFor="let mentor of mentorRole" [value]="mentor.user_id">
                                             {{mentor.name}}
                                         </option>
                                     </select>
-                                </div>
+                                </div> -->
                                 <div class="mb-4">
                                     <button type="submit" class="w-100" mat-raised-button color="primary">
                                         Update Course
