--- a/src/app/page/view-course/view-course.component.html
+++ b/src/app/page/view-course/view-course.component.html
@@ -11,13 +11,11 @@
           </div>
         </div>
         <div class="table-responsive">
-          <table class="table table-hover">
+          <table  *ngIf="check" class="table table-hover">
             <thead>
               <tr>
-                <th>Course Id</th>
                 <th>Course Name</th>
                 <th>Author</th>
-                <th>Mentor</th>
                 <th *ngIf="check">Actions</th>
               </tr>
             </thead>
@@ -27,7 +25,6 @@
                 currentPage:page,
                 totalItems:count
               }; let i = index">
-                <td>{{course.courseId}}</td>
                 <td>
                   <a class="navLink mr-1" [routerLink]="['/page/topicView/'+course.courseId]">
                     <span class="p-2 badge badge-info">{{course.courseName.toUpperCase()}}</span>
@@ -40,14 +37,46 @@
                     </span>
                   </div>
                 </td>
+                <td *ngIf="check">
+                  <a class="text-white" mat-mini-fab color="accent"
+                    [routerLink]="['/page/updateCourse/'+course.courseId]">
+                    <mat-icon class="mat-18">create</mat-icon>
+                  </a>
+
+                  <a class="ml-3 text-white" mat-mini-fab color="primary">
+                    <mat-icon (click)="deleteCourse(course.courseId)" class="mat-18">delete</mat-icon>
+                  </a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <table  *ngIf="otherRole" class="table table-hover">
+            <thead>
+              <tr>
+                <th>Course Name</th>
+                <th>Author</th>
+                <th *ngIf="checkUser">Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let course of courseByProfile |  paginate:{
+                itemsPerPage:tableSize,
+                currentPage:page,
+                totalItems:count
+              }; let i = index">
+                <td>
+                  <a class="navLink mr-1" [routerLink]="['/page/topicView/'+course.courseId]">
+                    <span class="p-2 badge badge-info">{{course.courseName.toUpperCase()}}</span>
+                  </a>
+                </td>
                 <td>
                   <div *ngFor="let user of users">
-                    <span *ngIf="course.mentorId === user.id">
+                    <span *ngIf="course.authorId === user.id">
                       {{user.name}}
                     </span>
                   </div>
                 </td>
-                <td *ngIf="check">
+                <td *ngIf="checkUser">
                   <a class="text-white" mat-mini-fab color="accent"
                     [routerLink]="['/page/updateCourse/'+course.courseId]">
                     <mat-icon class="mat-18">create</mat-icon>
