--- a/src/app/page/side-menu/side-menu.component.html
+++ b/src/app/page/side-menu/side-menu.component.html
@@ -61,6 +61,9 @@
                 <a class="nav-link" [routerLink]="'/page/viewCourse'">
                     <i class="fa fa-book" aria-hidden="true"></i>
                     View Courses</a>
+                <a class="nav-link" [routerLink]="'/page/traineeTest'">
+                    <i class="fa fa-book" aria-hidden="true"></i>
+                    Perform Test</a>
         </li>
        
     </ul>
