comit to get assign mentor list component

--- a/src/app/page/side-menu/side-menu.component.html
+++ b/src/app/page/side-menu/side-menu.component.html
@@ -39,6 +39,11 @@
                             <i class="fa fa-book" aria-hidden="true"></i>
                             Courses</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="'/page/assignMentorList'">
+                            <i class="fa fa-users" aria-hidden="true"></i>
+                            Assign Mentor</a>
+                    </li>
                 </ul>
             </nav>
         </li>
