--- a/src/app/page/view-course/view-course.component.html
+++ b/src/app/page/view-course/view-course.component.html
@@ -96,6 +96,40 @@
           </div>
         </div>
       </div>
+    </div> 
+    <div *ngIf="check"  class="col-md-12">
+      <div *ngFor="let course of courses">
+        <mat-card>
+          <mat-card-title>{{course.courseName.toUpperCase()}}</mat-card-title>
+          <mat-card-content>{{course.courseDescription}}</mat-card-content>
+          <mat-card-actions align="end">
+            <a class="text-white" mat-mini-fab color="accent"
+                    [routerLink]="['/page/updateCourse/'+course.courseId]">
+                    <mat-icon class="mat-18">create</mat-icon>
+            </a>
+            <a class="ml-3 text-white" mat-mini-fab color="primary">
+              <mat-icon (click)="deleteCourse(course.courseId)" class="mat-18">delete</mat-icon>
+            </a>
+          </mat-card-actions>
+        </mat-card>
+    </div>
+    </div>
+    <div *ngIf="otherRole"  class="col-md-12">
+      <div *ngFor="let course of courseByProfile">
+        <mat-card>
+          <mat-card-title>{{course.courseName.toUpperCase()}}</mat-card-title>
+          <mat-card-content>{{course.courseDescription}}</mat-card-content>
+          <mat-card-actions align="end" *ngIf="checkUser">
+            <a class="text-white" mat-mini-fab color="accent"
+                    [routerLink]="['/page/updateCourse/'+course.courseId]">
+                    <mat-icon class="mat-18">create</mat-icon>
+            </a>
+            <a class="ml-3 text-white" mat-mini-fab color="primary">
+              <mat-icon (click)="deleteCourse(course.courseId)" class="mat-18">delete</mat-icon>
+            </a>
+          </mat-card-actions>
+        </mat-card>
+    </div>
     </div>
   </div>
 </div>
